upgrade spring-boot version 1.5.7 add maven plugin to install and download, start RabbitMQ